# ChangeLog for x11-misc/xcalendar
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xcalendar/ChangeLog,v 1.20 2007/08/02 13:18:58 uberlord Exp $

  02 Aug 2007; Roy Marples <uberlord@gentoo.org> xcalendar-4.0.ebuild:
  Keyworded ~x86-fbsd, #156902 thanks to Marc Kowarsky.

  22 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>; xcalendar-4.0.ebuild:
  Drop virtual/x11 references.

  21 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Redigest for Manifest2

  29 Jul 2006; Krzysiek Pawlik <nelchael@gentoo.org> xcalendar-4.0.ebuild:
  Added x11-misc/imake to DEPEND, see bug #140611.

  21 Jan 2006; Krzysiek Pawlik <nelchael@gentoo.org> xcalendar-4.0.ebuild:
  Fixed DEPEND for modular X.

  24 Apr 2005; Michael Hanselmann <hansmi@gentoo.org> xcalendar-4.0.ebuild:
  Stable on ppc.

  03 Feb 2005; <avatar@gentoo.org> xcalendar-4.0.ebuild:
  Added to ~ppc.

  22 Aug 2004; Tom Gall <tgall@gentoo.org> xcalendar-4.0.ebuild:
  stable on ppc64, bug #58695

  18 Jul 2004; Daniel Ahlberg <aliz@gentoo.org> xcalendar-4.0.ebuild:
  Added amd64 keyword, closing #57484.

  14 Jun 2004; <pyrania@gentoo.org> xcalendar-4.0.ebuild:
  Added motif to IUSE.

  01 Jun 2004; Brandon Hale <tseng@gentoo.org> xcalendar-4.0.ebuild:
  Add IUSE=

  27 Apr 2004; Aron Griffis <agriffis@gentoo.org> xcalendar-4.0.ebuild:
  Add inherit eutils

  11 Apr 2004; Markus Nigbur <pyrania@gentoo.org> xcalendar-4.0.ebuild:
  Go epatch!

  05 Feb 2004; Aron Griffis <agriffis@gentoo.org> xcalendar-4.0.ebuild:
  stable on alpha and x86 for bug 40403.  Thanks to Allan Graves for testing

  11 Jan 2004; Heinrich Wendel <lanius@gentoo.org> xcalendar-4.0.ebuild:
  fixed motif dep

  03 Nov 2003; Abhishek Amit <abhishek@gentoo.org> metadata.xml:
  Added metadata.xml

  26 Sep 2003; Michael Sterrett <msterret@gentoo.org> xcalendar-4.0.ebuild:
  x11-libs/xaw has gone away; seems to not need it to install; tidy
