@@ -1,5 +1,5 @@
 AUX xcalendar-4.0-motif-gentoo.diff 1104 RMD160 c86ba3abbc7a317a33939c89ccaba7589382709c SHA1 4393cbde0b4efad7f60456413b3d1613dec015bd SHA256 c1f3fdc391f51db457b7fe1de066a6f1faced4b31d69715fbd9e2d12e847c135
 DIST xcalendar-4.0+i18n.tar.gz 48635 RMD160 88f8ac6f735f93cb3679b118ff4ee9b735ca5e5c SHA1 9b5e2e3a7de4a4b5d2e36d685ebfc229d7dbe54c SHA256 f4c45d863c2a8a04bfcc4180cb06bd13bbdc26f855578e99b1e459e834c6fd7f
-EBUILD xcalendar-4.0.ebuild 1166 RMD160 5ae292a392a356660a5238116f95f79e0c6e223c SHA1 52c94437c06467bc81343f33bde0ef02b0673513 SHA256 e0099bf431d3aaa5c0bbdf7390f82ed50bc61f9b477d61c2a60841cabf34f536
-MISC ChangeLog 2266 RMD160 19f4163eb070ed5d9e0440f2e8dfb3dec63106ac SHA1 14c0a6e0a369daa95ed1e37d7dc371ba95685665 SHA256 0d9df909da71ec1b2c3d8b966da9b415a63272ad84bcd953ff7c27991f95a638
+EBUILD xcalendar-4.0.ebuild 1170 RMD160 2f2181301ea2072307bcc28350bec683eeffb985 SHA1 a1ad6dbf1a8a536f1dd43b964ed9ca9725ef5bfb SHA256 df1fb6857e35cb33129692a4fe9d6d4f30748d0b58a50483b0ccc99341df0886
+MISC ChangeLog 2358 RMD160 e1ab651575de0c029c28f32a53ac6bc2aed2df05 SHA1 f039e1f43cc545506f12df4d2f8c6686ac6c2602 SHA256 0f2085c625c664b25191db316768267a2de224ffb399b8cff28b3c7a626327b9
 MISC metadata.xml 166 RMD160 7b80226659bf40e97050b1ffce1858d5f20b3c60 SHA1 e6c6436c304a65b4a012a5b7be7ee264b228a645 SHA256 8e7de0a7f7c15840474de373a3ce36adcc5dd658b2e4d18366fcb63b964a0826
