@@ -1,17 +1,16 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xcalendar/xcalendar-4.0.ebuild,v 1.19 2007/08/02 13:18:58 uberlord Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xcalendar/xcalendar-4.0.ebuild,v 1.20 2008/03/23 15:17:34 coldwind Exp $
 
 inherit eutils
 
-S=${WORKDIR}/${PN}
 DESCRIPTION="A simple interactive calendar program with a notebook capability"
 HOMEPAGE="http://www.freebsd.org/"
 SRC_URI="ftp://daemon.jp.FreeBSD.org/pub/FreeBSD-jp/ports-jp/LOCAL_PORTS/${P}+i18n.tar.gz"
 
 SLOT="0"
 LICENSE="as-is"
-KEYWORDS="alpha ~amd64 ppc ppc64 x86 ~x86-fbsd"
+KEYWORDS="alpha amd64 ppc ppc64 x86 ~x86-fbsd"
 IUSE="motif"
 
 RDEPEND="x11-libs/libX11
@@ -24,10 +23,12 @@ DEPEND="${RDEPEND}
 	x11-proto/xproto
 	motif? ( x11-libs/openmotif )"
 
+S=${WORKDIR}/${PN}
+
 src_compile() {
 	if use motif
 	then
-		epatch ${FILESDIR}/${P}-motif-gentoo.diff
+		epatch "${FILESDIR}"/${P}-motif-gentoo.diff
 	fi
 	xmkmf -a
 	emake || die
@@ -40,7 +41,7 @@ src_install() {
 	dodir /etc/X11/app-defaults
 	sed 's;%%XCALENDAR_LIBDIR%%;/usr/lib/xcalendar;
 	     s;/usr/local/X11R5/lib/X11/;/usr/lib/;' \
-		< XCalendar.sed > ${D}/etc/X11/app-defaults/XCalendar || die
+		< XCalendar.sed > "${D}"/etc/X11/app-defaults/XCalendar || die
 
 	insinto /usr/lib/xcalendar
 	doins *.xbm *.hlp
